# azuracast-bsd

./: .gitattributes  .gitignore  INSTALL.md  KNOWN-ISSUES.md  README.md  SECURITY.md  azuracast.sample.env  composer.json  package.json  phpcs.xml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: default.yml
backend/config/: events.php  messagequeue.php
backend/config/routes/: api_admin.php  api_internal.php  api_station.php  dashboard.php
backend/src/Entity/: Settings.php  Station.php  StationBackendConfiguration.php  StationFrontendConfiguration.php  StationHlsStream.php  StationMount.php  StationPlaylist.php  StationRemote.php
backend/src/Enums/: StationFeatures.php
backend/src/Http/: ErrorHandler.php
backend/src/Media/: BatchUtilities.php
backend/src/Nginx/: ConfigWriter.php
backend/src/Radio/: AbstractLocalAdapter.php  Adapters.php  Configuration.php  RemoteSupervisorClientFactory.php
backend/src/Service/: Acme.php  ServerStats.php  ServiceControl.php
backend/src/VueComponent/: StationFormComponent.php
engine/: Cargo.toml  README.md  SPEC.md  build.bat
engine/src/: annotate.rs  audio_processing.rs  autodj.rs  callbacks.rs  config.rs  control.rs  crossfade.rs  decode.rs  feedback.rs  harbor.rs  hls.rs  main.rs  media.rs  output.rs  pipeline.rs  prepare.rs  queue.rs  server.rs
freebsd/: README.md  env.conf  env.conf.example  generate-jail-conf.sh  install.sh  media-mirror-sync.sh
freebsd/icecast/: 00-install-supervisor.sh  README.md  icecast.env.example  render-supervisord-conf.sh  supervisord.conf.tmpl  watchdog.sh
freebsd/integrated/: 10-provision-db-local.sh  my.cnf
freebsd/jail.conf.d/: integrated.conf.tmpl  mariadb.conf  mariadb.conf.tmpl  webapp.conf  webapp.conf.tmpl
freebsd/mariadb/: 00-install.sh  10-provision-db.sh  README.md  my.cnf.tmpl
freebsd/webapp/: 00-packages.sh  10-centrifugo.sh  11-sftpgo.sh  20-supervisor.sh  README.md  build-engine.sh  centrifugo-config.toml  configure-db.sh  crontab  nginx-proxy_params  nginx.conf  sftpgo.json  supervisord.conf  valkey.conf
freebsd/webapp/php-fpm.d/: internal.conf  www.conf
freebsd/webapp/rc.d/: azuracast
frontend/components/Admin/: menu.ts  routes.ts
frontend/components/Common/: CodemirrorTextarea.vue
frontend/entities/: ApiInterfaces.ts  NowPlaying.ts
frontend/functions/: useNowPlaying.ts  useStationQuery.ts
web/static/: openapi.yml
(+68 files in other folders)
